javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.23.MISSINGRETURN.2.javali
//2.3.23
//MISSING RETURN

class Main {
	int i;
	int a(){
		if(true){

		}
		else{
			return 9;
		}
	}
	
	void main() {
		i = a();
	}
}